--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <h2>Education</h2>
     <ul>
         <li>Bachelor of Science, Computer science - University Of Lagos (2023 - Till Date)</li>
+        <li>The Complete Web Development Bootcamp, Dr. Angelu Yu</li>
     </ul>
     <hr>
     <h2>Work Experience</h2>
