--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
         <a href="contact.html"><li>Contact Me</li></a>
         <a href="about.html"><li>About Me</li></a>
     </ul>
+    <footer>
     &copy; Okusanya Oluwatimilehin
+        </footer>
    
 </body>
 </html>
